<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_screen"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/title_home"
        />
    <item
        android:id="@+id/rank_screen"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_multiline_chart_24"
        android:title="@string/title_rank"
        />
    <item
        android:id="@+id/contest_screen"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_outline_24"
        android:title="@string/title_contest"
        />
    <item
        android:id="@+id/notification_screen"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/title_notification"
        />
    <item
        android:id="@+id/profile_screen"
        android:enabled="true"
        android:icon="@drawable/ic_outline_person_outline_24"
        android:title="@string/title_Profile"
        />

</menu>